WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273696
[UnifiedPDF] Going between page layout modes doesn't rescale or center appropriately
https://bugs.webkit.org/show_bug.cgi?id=273696
Summary
[UnifiedPDF] Going between page layout modes doesn't rescale or center approp...
Sammy Gill
Reported
2024-05-03 11:12:50 PDT
If you switch between layout modes, the result will not rescale or center the document. This means you may end up in the middle of the document when you were previously looking at an entire page.
Attachments
Add attachment
proposed patch, testcase, etc.
Sammy Gill
Comment 1
2024-05-03 11:13:10 PDT
rdar://125381629
Sammy Gill
Comment 2
2024-05-03 11:19:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28110
EWS
Comment 3
2024-05-03 14:09:32 PDT
Committed
278342@main
(d6237610e339): <
https://commits.webkit.org/278342@main
> Reviewed commits have been landed. Closing PR #28110 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug