[UnifiedPDF] Going between page layout modes doesn't rescale or center appropriately https://bugs.webkit.org/show_bug.cgi?id=273696 rdar://125381629

Reviewed by Abrar Rahman Protyasha and Simon Fraser.

To fix this, we can just force m_shouldUpdateAutoSizeScale to be set
right before we perform a document layout in this scenario. This will make
sure that the document gets refitted to the available width.

However, we should also respect if the document is already in
"Automatically Resize," mode. This means that we should not adjust the
page scale factor when performing this layout if the state was *already*
set.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::setDisplayModeAndUpdateLayout):

Canonical link: https://commits.webkit.org/278342@main